@@ -3,6 +3,7 @@
 	Added new GnomeSelector widget. We'll subclass this for
 	files, directories, icons, pixmaps and so on.
 
+	* gnome-icon-selector.[ch]: New files.
 	* gnome-file-selector.[ch]: New files.
 	* gnome-selectorP.h: New file.
 
